--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="main-window" id="window">
     <div class="main-window__change" id='mainWindowChange'>
         <div id="formOne">
-            <p>здравтсвуйте, выберите число экстрасенсов</p>
+            <p>Здравствуйте, выберите число экстрасенсов</p>
             <div class="form-number-extra">
                 <input type="text" id="dataOne"
                        class="form-control" maxlength="2"
